moved to cmd